Specification import - initial page content

--- a/score-http/score-repo/pom.xml
+++ b/score-http/score-repo/pom.xml
@@ -19,7 +19,7 @@
         <lombok.version>1.18.30</lombok.version>
         <mariadb-client.version>3.3.3</mariadb-client.version>
         <jOOQ.version>3.19.6</jOOQ.version>
-        <jOOQ.configuration.skip>true</jOOQ.configuration.skip>
+        <jOOQ.configuration.skip>false</jOOQ.configuration.skip>
 
         <junit.version>4.13.2</junit.version>
         <junit.platform.version>1.10.1</junit.platform.version>
